# tiny-ntt

./: .gitignore  README.md  flake.nix
chipyard/: NttRocc.scala  README.md  ntt-test.c
librelane/: config.json
new_reference/: cg_ntt.py  cg_ntt_8butterfly.py  test_cg_ntt.py  test_cg_ntt_8butterfly.py
reports/: final-report-refs.bib  final-report.tex  interim-report-refs.bib  interim-report.tex
reports/mermaid/: 3_1_flow.mmd  3_2_structure.mmd  3_3_butterfly.mmd  3_4_rocketchip_integration.mmd  3_6_state_machine.mmd  3_7_ntt_stage.mmd  Makefile
rtl/: barrett_mult.v  barrett_reduction.sv  barrett_reduction.v  bram_tdp.v  coeff_ram.sv  coeff_ram.v  inverse_twiddle_rom.sv  inverse_twiddle_rom.v  mod_add.sv  mod_add.v  mod_mult.sv  mod_mult.v  mod_sub.sv  mod_sub.v  montgomery_reduction.sv  montgomery_reduction.v  ntt_bank_io.sv  ntt_bank_switch.sv  ntt_bank_switch.v  ntt_butterfly.sv  ntt_butterfly.v  ntt_butterfly_inverse.sv  ntt_butterfly_inverse.v  ntt_cg_address_gen.sv  ntt_cg_address_gen.v  ntt_coeff_bank_single.sv  ntt_coeff_bank_single.v  ntt_coeff_banks.sv  ntt_coeff_banks.v  ntt_control.sv  ntt_control_inverse.sv  ntt_control_parallel.sv  ntt_control_parallel.v  ntt_forward.sv  ntt_forward.v  ntt_inverse.sv  ntt_inverse.v  ntt_pointwise_mult.sv  ntt_pointwise_mult.v  ntt_pointwise_mult_synth.sv  (+21 more)
rtl/old/: ntt_bank_io.v
scripts/: find_psi.py  generate_inverse_twiddles.py  generate_twiddles.py  precompute_constants.py
software_benchmark/: CMakeLists.txt  README.md  benchmark_ntt.cpp  benchmark_ntt_60bit.cpp  benchmark_simple.cpp  benchmark_simple_60bit.cpp
synth/: Makefile  README.md  synth.ys
test/: Makefile  ntt_reference.py  test_coeff_ram.py  test_mod_add.py  test_mod_sub.py  test_ntt_butterfly.py  test_ntt_forward.py  test_ntt_mult.py  test_twiddle_rom.py  twiddle_forward.hex  twiddle_forward_4096.hex  twiddle_inverse.hex  twiddle_inverse_1024.hex  twiddle_inverse_4096.hex
test/archive/: debug_montgomery.py  ntt_inverse_kyber.py  pwc_forward.py  pwc_inverse.py
test/cocotb_tests/: test_butterfly_inverse.py  test_intt_debug.py  test_intt_diagnostics.py  test_intt_readback.py  test_intt_trace.py  test_intt_unit.py  test_intt_verify.py  test_mod_add.py  test_mod_sub.py  test_ntt_butterfly.py  test_ntt_control.py  test_ntt_forward.py  test_ntt_forward_new_params.py  test_ntt_inverse.py  test_ntt_mult.py  test_ntt_poly_mult.py  test_twiddle_rom.py
test/refs/: __init__.py  fast_ntt_negacyclic_convolution.py  generate_twiddle_hex.py  ntt_forward_reference.py  ntt_inverse_reference.py  verify_complete_ntt.py  verify_forward_ntt.py  verify_inverse_ntt.py  verify_params.py  verify_twiddles.py
